--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -150,13 +150,114 @@ main{
 
 }
 .skills-child{
-    background-color:#FFF8F3;
+    background-color:#fff8f359;
     padding: 30px 10px;
     border-radius: 10px;
-    box-shadow: 0 2px 2px 2px;
+    box-shadow: 1px 1px 1px 1px;
 }
 .skills-container .skills-p1{
     font-size: 16px;
     color:grey;
     margin-top: 15px;
 }
+
+
+.parent-resume{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+.resume{
+    margin-top: 120px;
+}
+.resume .heading-h3{
+    font-size: 35px;
+    margin-bottom: 40px;
+    text-align: center;
+    padding: 15px;
+}
+
+.resume-left .heading-h
+{
+    font-size: 30px;
+    margin-bottom: 20px;
+}
+.resume-left1 .heading-h4{
+      font-size: 25px;
+      margin: 20px 0 5px 0;
+}
+.resume-left1 .heading-h5{
+    font-size: 20px;
+}
+
+.resume-left1 .parag{
+    font-size: 16px;
+    color: grey;
+    margin: 15px 0 25px 0;
+}
+.resume-right .heading-h
+{
+    font-size: 30px;
+    margin-bottom: 20px;
+}
+.resume-right1 .heading-h4{
+      font-size: 25px;
+      margin: 20px 0 5px 0;
+
+}
+.resume-right1 .heading-h5{
+    font-size: 20px;
+}
+
+
+.resume-right1 .parag{
+    font-size: 16px;
+    color: grey;
+    margin: 15px 0 25px 0;
+
+}
+
+.button2{
+    text-align: center;
+    margin-top: 20px;
+ }
+
+ /* footer part is start */
+
+ #footer-parent{
+    background-color: #FFF8F3;
+    display: flex;
+    gap: 100px;
+    padding:130px 230px ;
+ }
+ .heading-h31{
+    font-size: 35px;
+    margin-bottom: 20px;
+ }
+
+ .icons{
+    display: flex;
+    gap: 20px;
+ }
+ .par1{
+    font-size: 16px;
+    margin-bottom: 30px;
+ }
+ .headin{
+    font-size: 35px;
+ }
+.footer-colum{
+    width: 50%;
+}
+
+#footer-parent input[type="text"],#footer-parent input[type="email"], #footer-parent textarea{
+    padding: 10px 20px;
+    margin-top: 28px;
+    margin-bottom: 24px;
+    display: block;
+    width: 100%;
+    height: 28px;
+    border-radius: 5px;
+    border: none;
+}
+
